@@ -1,0 +1,5 @@
+Copyright <tmpl_var year> <tmpl_var author>
+
+<tmpl_var license_blurb>
+
+Insert license text here.
