@@ -41,3 +41,7 @@ COPYRIGHT AND LICENCE
 Copyright (C) <tmpl_var year> <tmpl_var author>
 
 <tmpl_var license_blurb>
+
+The full text of the license can be found in the LICENSE file included
+with this distribution.
+
