@@ -1,4 +1,5 @@
 Changes
+LICENSE
 MANIFEST
 MANIFEST.SKIP
 Makefile.PL
