@@ -1,0 +1,11 @@
+Copyright 2010 Jaldhar H. Vyas
+
+This distribution is free software; you can redistribute it and/or modify it
+under the terms of either:
+
+a) the GNU General Public License as published by the Free Software
+Foundation; either version 2, or (at your option) any later version, or
+
+b) the Artistic License version 2.0.
+
+Insert license text here.
