@@ -1,5 +1,6 @@
 Build.PL
 Changes
+LICENSE
 MANIFEST
 MANIFEST.SKIP
 README
